implement code review suggestions